# src/routes/profiles.router.js
@@ -5,6 +5,18 @@ const profilesController = ProfilesController();
 
 router
   .route('/profiles')
+  .get(profilesController.getProfiles);
+
+router
+  .route('/profiles')
   .post(profilesController.getProfileData);
+
+router
+  .route('/profiles/following')
+  .post(profilesController.following);
+
+router
+  .route('/profiles/followers')
+  .post(profilesController.followers);
 
 module.exports = router;
